[metadata]
name = tfluna-driver
version = 0.1.0
author = Clément Nussbaumer
author_email = clement@astutus.org
description = Code to read measurements from a Tf-Luna LiDAR sensor.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/clementnuss/tfluna-python
project_urls =
    Bug Tracker = https://github.com/clementnuss/tfluna-python
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src